# pythagoras

./: Cargo.toml  Makefile.toml  README.md
doc/: search-index.js  settings.html  src-files.js
doc/anyhow/: fn.Ok.html  index.html  macro.bail.html  struct.Error.html  trait.Context.html  type.Result.html
doc/proc_macro2/: all.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html
doc/pythagoras/: index.html
doc/quote/: all.html  index.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html
doc/serde/: derive.Deserialize.html  derive.Serialize.html  macro.forward_to_deserialize_any.html  trait.Deserialize.html  trait.Serializer.html
doc/serde_derive/: all.html  index.html
doc/syn/: enum.AttrStyle.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.Lit.html  enum.Meta.html  enum.TraitBoundModifier.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  macro.Token.html  macro.braced.html  macro.parenthesized.html  macro.parse_macro_input.html  macro.parse_quote_spanned.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.AssocType.html  struct.Attribute.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Constraint.html  struct.DataStruct.html  struct.DataUnion.html  struct.DeriveInput.html  struct.Error.html  struct.ExprArray.html  struct.ExprAssign.html  (+44 more)
docs/: .rustc_info.json  .rustdoc_fingerprint.json  crates.js  help.html  index.html  search-index.js  src-files.js
src/: lib.rs  right_angle.rs  utils.rs
(+539 files in other folders)
